# agent47

./: .gitignore  Dockerfile  README.md  REPLIT_PROMPT_UI.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/transitions/2026-02-07/: 21.md
.claude/transitions/2026-02-08/: 04.md  05.md  052548.md
.claude/work/2026-02-07_01_clawderpunk-core/: exploration.md  metadata.json  requirements.md
.github/workflows/: ci.yml
docs/: clawderpunk-tech-spec.md
docs/epics/: EPIC-1-Core-Backbone.md  EPIC-2-Projections-Memory.md  EPIC-3-Agent-Zero-Integration.md  EPIC-4-OpenClaw-Integration.md  EPIC-4.5-OpenClaw-Memory-Sync-Contract.md  EPIC-5-Observability-Scale.md  EPIC-6-Landing-Page.md  ROADMAP.md
migrations/: 001_create_events.sql  002_create_memory_tables.sql
skills/clawderpunk/: SKILL.md  skill.json
skills/clawderpunk/bins/: clawderpunk
src/clawderpunk_tool/: __init__.py  client.py  config.py  tool.py
src/openclaw_skill/: __init__.py  __main__.py  cli.py  client.py  config.py  renderer.py  sync.py
src/punk_records/: config.py  main.py
src/punk_records/api/: console.py  context.py  context_packs.py  deps.py  events.py  health.py  memory.py  metrics.py
src/punk_records/kafka/: consumer.py  producer.py
tests/: conftest.py  test_api.py  test_clawderpunk_tool.py  test_consumer.py  test_context_api.py  test_context_packs_api.py  test_integration.py  test_memory_api.py  test_memory_models.py  test_memory_store.py  test_models.py  test_openclaw_skill.py  test_producer.py  test_projection_engine.py  test_promotion_rules.py  test_store.py
(+10 files in other folders)
